<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
	
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:textSize="25sp" />
    
    <ListView
        android:id="@+id/lstContact"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@id/txtTitle"
        android:background="@drawable/border_ui" />
    
    <TextView
        android:id="@+id/txtId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edName"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lstContact"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtId"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lstContact"
        android:layout_toRightOf="@+id/txtId"
        android:layout_marginTop="10dp"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edEmail"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtId"
        android:layout_marginLeft="0dp"
        android:text="@string/txtName"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edId"
        android:layout_toRightOf="@+id/txtName"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/upContact"
        android:layout_alignLeft="@+id/txtName"
        android:text="@string/txtEmail"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edName"
        android:layout_toRightOf="@+id/txtEmail"
        android:inputType="textWebEmailAddress" />

    <Button
        android:id="@+id/upContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edEmail"
        android:layout_below="@+id/edEmail"
        android:onClick="updateContact"
        android:text="@string/btnUpContact" />

</RelativeLayout>